# ai-voice-assistant

./: README.md
.github/workflows/: DeployBackendApp.yml  DeployFrontendApp.yml
backend/: .gitignore  Dockerfile  main.py  project_config.py  pyproject.toml  requirements.txt
backend/assistant/: assistant_controller.py  assistant_service.py
backend/audio_handling/: audio_generation_service.py  audio_transcription_service.py  eleven_labs_audio_generation_service.py
backend/chat/: chat_service.py  claude_ai_chat_service.py  multiple_users_chat_service.py
backend/transcoding/: transcoding_service.py
backend/utils/: file_utils.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/scripts/: zip_project.sh
frontend/src/: configuration.ts
frontend/src/hooks/: useApp.ts
frontend/src/hooks/VoiceAssistant/: useVoiceAssistant.hook.ts
frontend/src/hooks/VoiceAssistant/AudioBarsVisualizer/: useAudioBarsVisualizer.ts
frontend/src/hooks/VoiceAssistant/SnackbarMessage/: SnackbarMessage.component.tsx
frontend/src/hooks/VoiceAssistant/VoiceAssistantAvatar/: useVoiceAssistantAvatar.ts
frontend/src/pages/: index.tsx
frontend/src/pages/components/AudioPlayer/: AudioPlayer.component.tsx
frontend/src/pages/components/FileSender/: FileSender.component.tsx
frontend/src/pages/components/VoiceAssistant/: VoiceAssistant.component.tsx  useVoiceAssistant.hook.ts
frontend/src/pages/services/: aivoiceassistant.service.ts
frontend/src/services/: aivoiceassistant.service.ts
frontend/src/styles/: Home.module.css  VoiceAssistant.module.css
(+4 files in other folders)
